fix: remove cache
Runtime: 11 ms
Memory Usage: 40 MB